--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBackground"
     tools:context="com.example.gehna.shopapp.MainActivity">
 
     <ImageView
@@ -75,6 +76,8 @@
         android:layout_marginTop="8dp"
         android:background="#31cded"
         android:text="Login"
+        android:textColor="#ffffff"
+        android:backgroundTint="#2e2f30"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
