--- a/app/src/main/res/layout/shop_spinner_row.xml
+++ b/app/src/main/res/layout/shop_spinner_row.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/image_view_logo"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:src="@drawable/forever21_logo"
+        android:layout_margin="10dp"/>
+
+    <TextView
+        android:id="@+id/text_view_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/image_view_logo"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/image_view_logo"
+        android:gravity="center"
+        android:text="Forever 21"
+        android:textColor="@android:color/black"
+        android:textSize="20dp" />
+
+</RelativeLayout>
