--- a/app/src/main/res/layout/shop_spinner_row.xml
+++ b/app/src/main/res/layout/shop_spinner_row.xml
@@ -7,7 +7,7 @@
         android:id="@+id/image_view_logo"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:src="@drawable/forever21_logo"
+        android:src="@mipmap/forever21_logo"
         android:layout_margin="10dp"/>
 
     <TextView
