--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -11,7 +11,7 @@
         <item
             android:id="@+id/nav_search"
             android:icon="@drawable/search"
-            android:title="Search" />
+            android:title="Nearby" />
         <item
             android:id="@+id/nav_popular"
             android:icon="@drawable/popular"
