--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -47,6 +47,15 @@
         android:textAlignment="center"/>
 
 
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/spinner_style"
+        android:layout_marginTop="37dp"
+        android:text="submit" />
+
     <!--<TextView
         android:id="@+id/brand"
         android:layout_width="match_parent"
