--- a/app/src/main/res/layout/custom_list_row.xml
+++ b/app/src/main/res/layout/custom_list_row.xml
@@ -9,13 +9,16 @@
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:layout_marginLeft="20dp"
-        android:gravity="center"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:layout_alignBottom="@+id/maps"/>
     <Button
         android:id="@+id/maps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="maps"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"/>
 </RelativeLayout>
