--- a/app/src/main/res/layout/activity_store__register.xml
+++ b/app/src/main/res/layout/activity_store__register.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,19 +10,16 @@
     tools:context="com.example.gehna.shopapp.Store_Register">
 
 
-
     <EditText
         android:id="@+id/store_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="53dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Store Name"
-        tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="153dp" />
+        />
 
     <EditText
         android:id="@+id/email"
@@ -27,12 +27,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/store_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="67dp" />
+        />
 
     <EditText
         android:id="@+id/phone"
@@ -40,46 +39,45 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/email"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Phone"
-        android:inputType="phone"
-        tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="248dp" />
+        android:inputType="phone" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/confirm_pass"
-        android:layout_alignLeft="@+id/phone"
-        android:layout_alignStart="@+id/phone"
-        android:layout_marginBottom="16dp"
+        android:layout_below="@+id/latitude"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPassword"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="420dp" />
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/register"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="70dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:background="@drawable/round_button"
+        android:backgroundTint="#2e2f30"
+        android:textColor="#fff"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="38dp"
+        android:layout_below="@+id/confirm_pass"
+        android:layout_marginTop="20dp"
         android:text="register" />
 
     <EditText
         android:id="@+id/confirm_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/register"
-        android:layout_alignLeft="@+id/password"
-        android:layout_alignStart="@+id/password"
         android:layout_marginBottom="11dp"
         android:ems="10"
+        android:layout_below="@+id/password"
+        android:layout_marginTop="20dp"
         android:hint="Confirm Password"
+        android:layout_centerHorizontal="true"
         android:inputType="textPassword" />
 
     <ProgressBar
@@ -95,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/phone"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Longitude"
         android:inputType="numberDecimal" />
@@ -107,8 +105,10 @@
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/password"
         android:layout_alignRight="@+id/password"
-        android:layout_below="@+id/progressBar"
+        android:layout_below="@+id/longitude"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="numberDecimal" />
 
 </RelativeLayout>
+</ScrollView>
