--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -49,11 +49,15 @@
 
     <Button
         android:id="@+id/submit"
-        android:layout_width="wrap_content"
+        android:background="@drawable/round_button"
+        android:backgroundTint="#2e2f30"
+        android:textColor="#fff"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="40dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/spinner_style"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="50dp"
         android:text="submit" />
 
     <!--<TextView
