--- a/app/src/main/res/layout/activity_stores__available.xml
+++ b/app/src/main/res/layout/activity_stores__available.xml
@@ -6,11 +6,20 @@
     android:layout_height="match_parent"
     tools:context="com.example.gehna.shopapp.Stores_Available">
 
+    <TextView
+        android:id="@+id/textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stores Near You"
+        android:layout_centerHorizontal="true"
+        android:textSize="40dp"
+        android:textColor="#2e2f30"
+        android:fontFamily="@font/permanentmarker_regular"/>
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/textview"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp" />
 </RelativeLayout>
