--- a/app/src/main/res/drawable/round_button.xml
+++ b/app/src/main/res/drawable/round_button.xml
@@ -2,6 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="50dp"/>
+
+    <stroke
+        android:width="1dp"
+        android:color="#fff" />
+    <corners android:radius="5dp"/>
 
 </shape>
