--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,34 +2,38 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/animation_list"
     tools:context="com.example.gehna.shopapp.MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="269dp"
-        android:layout_height="148dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-         />
+
+    <TextView
+        android:id="@+id/textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="Sign In"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/pacifico"
+        android:textSize="40dp"
+        android:textColor="#fff"/>
 
     <EditText
         android:id="@+id/email"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/textview"
         android:layout_gravity="center"
         android:layout_marginTop="28dp"
         android:layout_centerHorizontal="true"
         android:hint="Email"
+        android:textColorHint="#fff"
         android:inputType="textEmailAddress"
         android:maxLines="1"
-        android:singleLine="true"
-        android:text="" />
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/password"
@@ -39,6 +43,7 @@
         android:layout_alignStart="@+id/email"
         android:layout_below="@+id/email"
         android:layout_marginTop="30dp"
+        android:textColorHint="#fff"
         android:layout_gravity="center"
         android:hint="Password"
         android:inputType="textPassword"
@@ -54,10 +59,10 @@
         android:layout_marginLeft="20dp"
         android:layout_below="@+id/password"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/round_button"
-        android:backgroundTint="#2e2f30"
         android:text="Login"
+        android:textStyle="bold"
         android:textColor="#ffffff" />
 
     <TextView
@@ -78,19 +83,16 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
-        android:text="New user? Click here to register."
+        android:layout_marginBottom="30dp"
+        android:textColor="#fff"
+        android:text="New user? Click here to Sign Up."
         android:textSize="18dp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:visibility="gone"
         />
 
@@ -98,10 +100,10 @@
         android:id="@+id/store_owner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login"
+        android:layout_below="@+id/textView5"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"
-        android:backgroundTint="#2e2f30"
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
         android:layout_marginLeft="20dp"
         android:background="@drawable/round_button"
         android:text="log in as store owner"
