--- a/app/src/main/res/layout/activity_store__login.xml
+++ b/app/src/main/res/layout/activity_store__login.xml
@@ -4,17 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/relativeLayout"
+    android:background="@drawable/animation_list_2"
     tools:context="com.example.gehna.shopapp.Store_Login">
 
-    <EditText
-        android:id="@+id/store_name"
+    <TextView
+        android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/email"
-        android:layout_alignLeft="@+id/email"
-        android:layout_alignStart="@+id/email"
-        android:layout_marginBottom="21dp"
+        android:layout_centerHorizontal="true"
+        android:text="Store Sign In"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/pacifico"
+        android:textSize="40dp"
+        android:textColor="#fff"/>
+    <EditText
+        android:id="@+id/store_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textview"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_centerHorizontal="true"
         android:ems="10"
+        android:textColorHint="#fff"
         android:inputType="textPersonName"
         android:hint="Store Name" />
 
@@ -22,36 +35,40 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/password"
-        android:layout_alignLeft="@+id/password"
-        android:layout_alignStart="@+id/password"
-        android:layout_marginBottom="75dp"
+        android:layout_alignRight="@+id/store_name"
+        android:layout_alignLeft="@+id/store_name"
+        android:layout_below="@+id/store_name"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Email"
+        android:textColorHint="#fff"
         android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/register"
-        android:layout_alignStart="@+id/register"
-        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/store_name"
+        android:layout_alignLeft="@+id/store_name"
+        android:layout_below="@id/email"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Password"
+        android:textColorHint="#fff"
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:background="@drawable/round_button"
-        android:backgroundTint="#2e2f30"
         android:textColor="#fff"
+        android:textStyle="bold"
         android:layout_marginLeft="50dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/progressBar"
+        android:layout_below="@+id/password"
+        android:layout_marginTop="50dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="20dp"
         android:text="Log in" />
 
     <TextView
@@ -60,14 +77,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="36dp"
+        android:textSize="15dp"
+        android:layout_marginBottom="20dp"
+        android:textColor="#fff"
+        android:layout_below="@+id/progressBar"
         android:text="New Store? Click here to Register" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/register"
+        android:layout_below="@+id/login"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp" />
 
