--- a/app/src/main/res/layout/activity_store__register.xml
+++ b/app/src/main/res/layout/activity_store__register.xml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_height="wrap_content"
+<ScrollView android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/animation_list_2"
+    android:id="@+id/scrollView">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.example.gehna.shopapp.Store_Register">
 
 
-    <EditText
-        android:id="@+id/store_name"
+    <TextView
+        android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="53dp"
+        android:text="Register Store"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/pacifico"
+        android:textSize="40dp"
+        android:textColor="#fff"/>
+
+    <EditText
+        android:id="@+id/store_name"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="70dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/textview"
+        android:layout_marginTop="30dp"
         android:ems="10"
+        android:textColorHint="#fff"
         android:inputType="textPersonName"
         android:hint="Store Name"
         />
@@ -30,6 +47,9 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Email"
+        android:layout_alignLeft="@+id/store_name"
+        android:layout_alignRight="@+id/store_name"
+        android:textColorHint="#fff"
         android:inputType="textEmailAddress"
         />
 
@@ -42,6 +62,9 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Phone"
+        android:layout_alignLeft="@+id/store_name"
+        android:layout_alignRight="@+id/store_name"
+        android:textColorHint="#fff"
         android:inputType="phone" />
 
     <EditText
@@ -51,8 +74,11 @@
         android:layout_below="@+id/latitude"
         android:ems="10"
         android:hint="Password"
+        android:layout_alignLeft="@+id/store_name"
+        android:layout_alignRight="@+id/store_name"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
+        android:textColorHint="#fff"
         android:inputType="textPassword" />
 
     <Button
@@ -61,11 +87,12 @@
         android:layout_marginLeft="70dp"
         android:layout_height="wrap_content"
         android:background="@drawable/round_button"
-        android:backgroundTint="#2e2f30"
         android:textColor="#fff"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/confirm_pass"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="20dp"
+        android:textColorHint="#fff"
         android:text="register" />
 
     <EditText
@@ -77,7 +104,10 @@
         android:layout_below="@+id/password"
         android:layout_marginTop="20dp"
         android:hint="Confirm Password"
+        android:layout_alignLeft="@+id/store_name"
+        android:layout_alignRight="@+id/store_name"
         android:layout_centerHorizontal="true"
+        android:textColorHint="#fff"
         android:inputType="textPassword" />
 
     <ProgressBar
@@ -94,8 +124,11 @@
         android:layout_below="@+id/phone"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:layout_alignLeft="@+id/store_name"
+        android:layout_alignRight="@+id/store_name"
         android:ems="10"
         android:hint="Longitude"
+        android:textColorHint="#fff"
         android:inputType="numberDecimal" />
 
     <EditText
@@ -103,11 +136,12 @@
         android:hint="Latitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/password"
-        android:layout_alignRight="@+id/password"
         android:layout_below="@+id/longitude"
         android:layout_marginTop="20dp"
+        android:layout_alignLeft="@+id/store_name"
+        android:layout_alignRight="@+id/store_name"
         android:ems="10"
+        android:textColorHint="#fff"
         android:inputType="numberDecimal" />
 
 </RelativeLayout>
