--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#2e2f30</color>
+    <color name="black">#232222</color>
+    <color name="dark_grey">#605e5e</color>
+    <color name="light_grey">#d8d6d6</color>
+    <color name="light_blue">#2a86cc</color>
+    <color name="indigo_500">#3F51B5</color>
+    <color name="purple_500">#9C27B0</color>
+    <color name="deep_purple_500">#673AB7</color>
+
 </resources>
