--- a/app/src/main/res/layout/activity_store__details.xml
+++ b/app/src/main/res/layout/activity_store__details.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:id="@+id/scrollView"
+    android:background="@drawable/animation_list_2"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/animation_list_2"
-    android:id="@+id/relativeLayout"
     tools:context="com.example.gehna.shopapp.Store_Details">
 
     <TextView
@@ -58,6 +61,20 @@
         android:hint="Style"
         />
 
+    <EditText
+        android:id="@+id/size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/style"
+        android:layout_alignLeft="@+id/brand"
+        android:layout_alignRight="@+id/color"
+        android:layout_marginTop="57dp"
+        android:ems="10"
+        android:textColorHint="#fff"
+        android:inputType="textPersonName"
+        android:hint="Size (Eg: XS, S, M, L...)"
+        />
+
     <Button
         android:id="@+id/submit"
         android:layout_width="match_parent"
@@ -68,9 +85,11 @@
         android:background="@drawable/round_button"
         android:textColor="#fff"
         android:textStyle="bold"
-        android:layout_below="@+id/style"
+        android:layout_below="@+id/size"
+        android:layout_marginBottom="20dp"
         android:layout_centerHorizontal="true"/>
 
 
 
 </RelativeLayout>
+</ScrollView>
