--- a/app/src/main/res/layout/custom_list_row.xml
+++ b/app/src/main/res/layout/custom_list_row.xml
@@ -25,13 +25,12 @@
         android:layout_marginTop="20dp"
         android:textColor="#000"
         android:layout_alignBottom="@+id/maps"/>
-    <Button
+    <ImageButton
+        android:src="@drawable/ic_action_maps"
         android:id="@+id/maps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="directions"
         android:backgroundTint="#2c848e"
-        android:textColor="#fff"
         android:layout_marginRight="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
