--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -8,26 +8,26 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/home"
             android:title="Home" />
-       <!-- <item
-            android:id="@+id/nav_search"
+       <item
+            android:id="@+id/nav_about"
             android:icon="@drawable/search"
-            android:title="Nearby" />
-        <item
-            android:id="@+id/nav_popular"
+            android:title="About" />
+       <item
+            android:id="@+id/nav_rating"
             android:icon="@drawable/popular"
-            android:title="Popular" />
-        <item
-            android:id="@+id/nav_wishlist"
-            android:icon="@drawable/wishlist"
-            android:title="Wish List" />-->
+            android:title="Rating" />
+        <!--<item
+           android:id="@+id/nav_wishlist"
+           android:icon="@drawable/wishlist"
+           android:title="Wish List" /> !-->
     </group>
 
     <item android:title="">
         <menu>
-            <item
+            <!--<item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Share" />!-->
             <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/logout"
