--- a/app/src/main/res/layout/activity_store__login.xml
+++ b/app/src/main/res/layout/activity_store__login.xml
@@ -20,6 +20,7 @@
         android:textColor="#fff"/>
     <EditText
         android:id="@+id/store_name"
+        android:drawableLeft="@drawable/ic_action_store"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textview"
@@ -34,6 +35,7 @@
     <EditText
         android:id="@+id/email"
         android:layout_width="wrap_content"
+        android:drawableLeft="@drawable/ic_action_email"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/store_name"
         android:layout_alignLeft="@+id/store_name"
@@ -46,6 +48,7 @@
 
     <EditText
         android:id="@+id/password"
+        android:drawableLeft="@drawable/ic_action_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/store_name"
